force-app/main/default/objects/Account/fields/AccountRole__c.field-meta.xml
<CustomField>
    <fullName>AccountRole__c</fullName>
    <description>All roles this Account actually holds in relation to Learning Bridge (a company may hold more than one role at once). / この取引先が実際に持っている役割をすべて記録（兼務が起こりうるため複数選択可）。</description>
    <inlineHelpText>Select all roles that apply. / 該当する役割をすべて選択してください。</inlineHelpText>
    <label>Account Role</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>01</fullName>
                <label>Customer</label>
            </value>
            <value>
                <fullName>02</fullName>
                <label>Instructor Affiliation</label>
            </value>
            <value>
                <fullName>03</fullName>
                <label>Own Company</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>